--- a/style.css
+++ b/style.css
@@ -280,7 +280,7 @@ html, body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('umar/WhatsApp Image 2025-06-28 at 23.47.49.jpeg') center/cover no-repeat;
+    background: url('WhatsApp Image 2025-06-28 at 23.47.49.jpeg') center/cover no-repeat;
     z-index: -2;
 }
 
@@ -872,7 +872,7 @@ html, body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('umar/WhatsApp Image 2025-06-28 at 23.47.55.jpeg') center/cover no-repeat;
+    background: url('WhatsApp Image 2025-06-28 at 23.47.55.jpeg') center/cover no-repeat;
     opacity: 0.1;
     z-index: 0;
 }
